--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-pandas==2.1.3
-numpy==1.26.2
-scikit-learn==1.3.2
-xgboost==2.0.2
-shap==0.43.0
-openpyxl==3.1.2
-python-jose==3.3.0
-passlib==1.7.4
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-multipart==0.0.12
+pandas==2.2.3
+numpy==2.1.3
+scikit-learn==1.5.2
+xgboost==2.1.2
+shap==0.46.0
+openpyxl==3.1.5
